--- a/lvl 1/dom-olympics-start/style.css
+++ b/lvl 1/dom-olympics-start/style.css
@@ -26,12 +26,12 @@
     padding: 5px;
 }
 
-.right {
+.messageRight {
     align-self: flex-end;
     background-color: lightblue;
 }
 
-.left {
+.messageLeft {
     align-self: flex-start;
     background-color: burlywood;
 }
