--- a/lvl 4/FunnyFlix/src/assets/Banner.css
+++ b/lvl 4/FunnyFlix/src/assets/Banner.css
@@ -2,14 +2,11 @@
 
 .banner{
     background-repeat: no-repeat;
-    position:relative;
     height: 530px;
-    max-width: 100%;
-    color: rgb(255, 255, 255);
+    width: 100%;
+    color: rgba(255, 255, 255, 0.815);
      
 }
-
-
 .banner_contents{
     margin-left: 35px;
     padding-top: 140px;
@@ -19,7 +16,7 @@
     font-size: 48px;
     font-weight: 800;
     padding-bottom: 5px;
-    padding-top: 140px;
+    padding-top: 212px;
 }
 .banner_description{
     width: 45rem;
@@ -31,10 +28,8 @@
 }
 .banner--fadeBottom{
     height: 200px;
-    background-image: linear-gradient(
-        180deg,transparent,rgba(37,37,37,0.61),#111
-    );
-}
+    background-image: linear-gradient(180deg,transparent,rgba(37,37,37,0.61),#111);
+}   
 .banner_button{
     cursor:pointer;
     color: #fff;
