--- a/lvl 4/FunnyFlix/src/assets/Row.css
+++ b/lvl 4/FunnyFlix/src/assets/Row.css
@@ -1,6 +1,7 @@
 .row{
 color: aliceblue;
 margin-left: 20px;
+max-width: 100%;
 }
 .rowPosters{
     display: flex;
@@ -9,6 +10,40 @@ margin-left: 20px;
     padding: 20px;
 }
 .rowPoster{
-    height: 100px;
-    width: 50px;
+    height: 300px;
+    width: 200px;
+    padding-right: 70px;
+
 }
+/* .rowPoster:hover{
+    transform: scale(1.10)
+} */
+.rowPosters::-webkit-scrollbar{
+    width: 10px;
+}
+.rowPosters::-webkit-scrollbar-thumb{
+    background-color: rgb(163, 163, 163);
+}
+.rowPosters::-webkit-scrollbar-thumb:hover{
+    background-color: crimson;
+}
+.rowPosters::-webkit-scrollbar-track{
+    border-radius: 10px;
+}
+.title{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 50px;
+    display: flex;
+    text-align: center;
+    font-weight: 800;
+    color: crimson;
+    align-items: center;
+    justify-content: center;
+}
+.Rating{
+    font-size: 15px;
+}
+
+
+/* 770px */
